Fix position of the rightbar sizer.
Signed-off-by: Thinker Lee <thinker.li@gmail.com>

--- a/whisper/templates/whisper/codeview.html
+++ b/whisper/templates/whisper/codeview.html
@@ -85,7 +85,7 @@
           width: 20%;
           height: 100%;
           overflow: auto;
-          margin-left: 1.5em;
+          padding-right: 100px;
       }
     .right_big #rightbar_inner {
         width: 40%;
@@ -182,11 +182,11 @@
 
       #right_size {
           display: block;
-          position: absolute;
+          position: fixed;
       }
       #right_size svg {
           position: absolute;
-          left: 0em;
+          left: -1.5em;
       }
 
       #right_size.expanded #right_expand {
