Remov incorrect height property of comments.
Signed-off-by: Thinker Lee <thinker.li@gmail.com>

--- a/whisper/templates/whisper/codeview.html
+++ b/whisper/templates/whisper/codeview.html
@@ -119,9 +119,7 @@
           margin-left: 1em;
       }
       #comments {
-          display: block;
-          height: 95%;
-          overflow: auto;
+          padding-bottom: 1em;
       }
       #dir_scroll {
           display: block;
