List recent discussions of a user.
/whisper/user/<username>/discussions is a list of recent discussions
made by a user.

Signed-off-by: Thinker Lee <thinker.li@gmail.com>

--- a/whisper/templates/whisper/codeview.html
+++ b/whisper/templates/whisper/codeview.html
@@ -94,6 +94,10 @@
           background: grey;
           color: white;
       }
+      #comments .comment .target a {
+          background: grey;
+          color: white;
+      }
       #comments .comment .content {
           padding-left: 0.5em;
       }
@@ -264,14 +268,14 @@
           <div id="comments">
             {% for comment in comments %}
             <div class="comment" id="comment-{{ comment.comment.lineno }}-{{ comment.comment.path }}" user="{{ comment.comment.user }}" cmt_id="{{ comment.comment.id }}">
-              <div class="target">{{ comment.comment.path }}:{{ comment.comment.lineno }} by {{ comment.comment.user }}</div>
+              <div class="target">{{ comment.comment.path }}:{{ comment.comment.lineno }} by <a href="/whisper/user/{{ comment.comment.user }}/discussions">{{ comment.comment.user }}</a></div>
               <div class="content">
                 <textarea>{{ comment.comment.content|escape }}</textarea>
               </div>
               <div class="replys">
                 {% for reply in comment.replys %}
                 <div class="comment" id="reply-{{ reply.id }}-{{ reply.lineno }}-{{ reply.path }}" user="{{ reply.user }}" cmt_id="{{ reply.id }}">
-                  <div class="target">by {{ reply.user }}</div>
+                  <div class="target">by <a href="/whisper/user/{{ reply.user }}/discussions">{{ reply.user }}</a></div>
                   <div class="content">
                     <textarea>{{ reply.content|escape }}</textarea>
                   </div>
