Do activate a comment if clicking on a link.
Activating a comment for clicking on a link is not only wasting
bandwidth to request a page that never show but also causing error
going back to the same page.  do_requested_scroll_to_line() will do
wrong for garbage |whisper_scroll_lineno| cookie set by
scroll_to_line.

Signed-off-by: Thinker Lee <thinker.li@gmail.com>

--- a/whisper/templates/whisper/codeview.html
+++ b/whisper/templates/whisper/codeview.html
@@ -648,6 +648,9 @@
         while ((comment.parentNode != comments &&
                 comment.parentNode.className != "replys") ||
                comment.className.indexOf("comment") < 0) {
+            if (comment.nodeName == "A") {
+                return null;
+            }
             comment = comment.parentNode;
             if (comment.parentNode == null) {
                 return null;
